# aicodesign

./: LICENSE  README.md
java/: README.md  pom.xml
java/src/main/java/dev/aicodesign/: AiBlackbox.java  AiCoSigned.java  AiDraft.java
python/: README.md  pyproject.toml
python/aicodesign/: __init__.py
