[project]
name = "aicodesign"
version = "0.1.0"
description = "Provenance and review tracking for AI-generated code."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "asuiu" }
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aicodesign"]
